[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/GameOver.gd" type="Script" id=1]
[ext_resource path="res://Assets/BG_WIP.png" type="Texture" id=2]
[ext_resource path="res://Assets/Buttons/ButtonExit.png" type="Texture" id=3]
[ext_resource path="res://Assets/Buttons/ButtonExitHover.png" type="Texture" id=4]
[ext_resource path="res://Assets/Buttons/ButtonCredits.png" type="Texture" id=5]
[ext_resource path="res://Assets/Buttons/ButtonCreditsHover.png" type="Texture" id=6]
[ext_resource path="res://Assets/Buttons/ButtonRetry.png" type="Texture" id=7]
[ext_resource path="res://Assets/Buttons/ButtonRetryHover.png" type="Texture" id=8]
[ext_resource path="res://Assets/quadaptor.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]

size = 64
use_mipmaps = true
use_filter = false
font_data = ExtResource( 9 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 9 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="GameOver" type="Node2D"]

script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Quit" type="TextureButton" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 420.0
margin_top = 550.0
margin_right = 839.0
margin_bottom = 669.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="Credits" type="TextureButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 430.0
margin_top = 450.0
margin_right = 849.0
margin_bottom = 569.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
_sections_unfolded = [ "Textures" ]

[node name="Try Again" type="TextureButton" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 450.0
margin_top = 350.0
margin_right = 869.0
margin_bottom = 469.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )
_sections_unfolded = [ "Textures" ]

[node name="Score" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 170.0
margin_right = 1340.0
margin_bottom = 248.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.564706, 0, 1, 1 )
text = "jkljklj"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="HighScore" type="Label" parent="." index="5"]

modulate = Color( 0.797656, 0.535156, 1, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 250.0
margin_right = 1340.0
margin_bottom = 328.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "jkljklj"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility", "custom_fonts" ]

[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]

[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]

[connection signal="pressed" from="Try Again" to="." method="_on_Try_Again_pressed"]


